--- a/1 .html
+++ b/1 .html
@@ -5,7 +5,7 @@
 		<title>翎殇的璀璨星海</title>
 	</head>
 	<body>
-		<h1 style="width:100%;text-align:center;"><font color="scarlet">欢迎来到旭旭的私人网站</font></h1>
+		<h1 style="width:100%;text-align:center;"><font color="scarlet">旭旭的私人网站</font></h1>
 		<h5 style="widtd:100%;text-align:center;"><font color=“navy blue">首先，欢迎您不知出于什么原因的访问本网站！</font></h5>
 		<article></article>
 	</body>
