--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 	<head>
 		<meta charset="utf-8">
 		<title>翎殇的璀璨星海</title>
+
+    <style>
+	body
+	{
+	    background-image:url(beijing3.jpg);
+        background-position:center;           
+        background-repeat:repeat-y；
+	}
+	</style>
 	</head>
 	<body>
-		<h1 style="width:100%;text-align:center;"><font color="scarlet">欢迎来到旭旭的私人网站</font></h1>
-		<h5 style="widtd:100%;text-align:center;"><font color=“navy blue">首先，欢迎您不知出于什么原因的访问本网站！</font></h5>
+	
+		<h1 style="width:100%;text-align:center;"><font color="scarlet">旭旭的私人网站</font></h1>
+		<h5 style="widtd:100%;text-align:center;"><font color=“#FFFACD">首先，欢迎您不知出于什么原因的访问本网站！</font></h5>
+  	<div class="btn-group">
+		<h3><font color=“#00FF00">常用资料</h3>
+  		<a href="http://www.sioe.cn/yingyong/yanse-rgb-16/" class="btn btn-group">RGB颜色值</a>
+  		<a href="http://www.runoob.com/" class="btn btn-group">菜鸟教程</a>
+  		<a href="https://www.liaoxuefeng.com/" class="btn btn-group">廖雪峰官网</a>
+  		<a href="http://bayunhome.com/" class="btn btn-group">八云论坛</a>
+  		<a href="" class="btn btn-group">首页</a>
+  		<a href="" class="btn btn-group">首页</a>
+		</div>
 		<article></article>
 	</body>
 </html>
