--- a/index.html
+++ b/index.html
@@ -3,28 +3,55 @@
 	<head>
 		<meta charset="utf-8">
 		<title>翎殇的璀璨星海</title>
-
     <style>
 	body
 	{
-	    background-image:url(beijing3.jpg);
+	    background-image:url(beijing7.jpg);
         background-position:center;           
         background-repeat:repeat-y；
 	}
+    .dropdown {
+  position: relative;
+  display: inline-block;
+   }
+    .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  }
+   .dropdown:hover .dropdown-content {
+  display: block;
+  }
 	</style>
 	</head>
 	<body>
 	
 		<h1 style="width:100%;text-align:center;"><font color="scarlet">旭旭的私人网站</font></h1>
-		<h5 style="widtd:100%;text-align:center;"><font color=“#FFFACD">首先，欢迎您不知出于什么原因的访问本网站！</font></h5>
+		<h3 style="widtd:100%;text-align:center;"><font color=“#FFFACD">你若盛开，蝴蝶自来！</font></h3>
   	<div class="btn-group">
 		<h3><font color=“#00FF00">常用资料</h3>
   		<a href="http://www.sioe.cn/yingyong/yanse-rgb-16/" class="btn btn-group">RGB颜色值</a>
-  		<a href="http://www.runoob.com/" class="btn btn-group">菜鸟教程</a>
+  		<div class="dropdown">
+		<a href="http://www.runoob.com/" class="btn btn-group"><span>菜鸟教程</span></a>
+		<div class="dropdown-content">
+		<a href="http://www.runoob.com/html/html-tutorial.html" class="btn btn-group">HTML5</a>
+		<a href="http://www.runoob.com/css/css-tutorial.html" class="btn btn-group">CSS</a>
+		</div>
+		</div>
   		<a href="https://www.liaoxuefeng.com/" class="btn btn-group">廖雪峰官网</a>
   		<a href="http://bayunhome.com/" class="btn btn-group">八云论坛</a>
   		<a href="" class="btn btn-group">首页</a>
   		<a href="" class="btn btn-group">首页</a>
+		</div>
+		<div>
+		<img src="beijing1.png" width="100" height="80" />
+		<img src="beijing1.png" width="100" height="80" />
+		</br>
+		<img src="beijing1.png" width="100" height="80" />
+		<img src="beijing1.png" width="100" height="80" />
 		</div>
 		<article></article>
 	</body>
