--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
   		<a href="" class="btn btn-group">首页</a>
 		</div>
 		<div>
-		<img src="beijing1.png" width="100" height="80" />
-		<img src="beijing1.png" width="100" height="80" />
+		<img src="beijing1.jpg" width="50" height="30" />
+		<img src="beijing1.jpg" width="50" height="30" />
 		</br>
-		<img src="beijing1.png" width="100" height="80" />
-		<img src="beijing1.png" width="100" height="80" />
+		<img src="beijing1.jpg" width="50" height="30" />
+		<img src="beijing1.jpg" width="50" height="30" />
 		</div>
 		<article></article>
 	</body>
